--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --aot --build-optimizer --optimization --progress --configuration=production --base-href=/PPInt/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -20,6 +20,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "3dmol": "^2.0.6",
+    "ag-grid-angular": "^30.2.0",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-enterprise": "^30.2.0",
+    "angular-plotly.js": "^5.2.2",
+    "ngx-spinner": "^15.0.1",
+    "plotly.js-dist-min": "^2.27.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -29,6 +36,7 @@
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/plotly.js-dist-min": "^2.3.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
