--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
       "dom"
     ],
     "paths": {
+      "@env": ["src/environments/environment"],
+      "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"]
     }
   },
